--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "testbench",
   "version": "0.0.0",
   "description": "protoyping",
+  "private": true,
   "main": "build/server/",
   "scripts": {
-    "test": "mocha"
+    "start": "echo nope",
+    "build": "npm run compile --silent && npm run bundle-slow --silent",
+    "compile": "babel --presets es2015,react --plugins transform-async-to-generator source/ -d build/",
+    "bundle-fast": "webpack build/client/index.js build/client/bundle/index.js",
+    "bundle-slow": "webpack build/client/index.js build/client/bundle/index.js --optimize-minimize --optimize-dedupe",
+    "watch": "nodemon --watch source/ -e js,jsx,json,html,css,sass,scss --exec \"npm run build --silent && npm run start --silent\""
   },
   "repository": {
     "type": "git",
@@ -17,7 +23,17 @@
   },
   "homepage": "https://github.com/dodekeract/testbench#readme",
   "dependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "dota2-api": "^0.2.0",
-    "steam-user-inventory": "^2.0.0"
+    "socket.io-client": "^1.4.8",
+    "steam-user-inventory": "^2.0.0",
+    "superagent": "^2.2.0",
+    "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.2"
   }
 }
